--- a/AndroidStudioProjects/JavaDevelopers/app/src/main/res/layout/row_user.xml
+++ b/AndroidStudioProjects/JavaDevelopers/app/src/main/res/layout/row_user.xml
@@ -2,14 +2,15 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="100dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="10dp"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
     android:clickable="true"
     android:focusable="true"
     android:elevation="60dp"
-    android:foreground="?android:attr/selectableItemBackground"
-    >
+    app:cardCornerRadius="20dp"
+    android:foreground="?android:attr/selectableItemBackground">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -22,7 +23,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
             android:scaleType="fitXY"
-            />
+            android:layout_alignParentBottom="true" />
 
         <TextView
             android:layout_width="wrap_content"
